--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -19,7 +19,7 @@
   }
 }
 
-@mixin desktop {
+@mixin col-large {
   @media #{$brk-wide} {
     @content;
   }
